--- a/day11/numpy.ipynb
+++ b/day11/numpy.ipynb
@@ -1628,8 +1628,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-06T07:31:22.280480Z",
-     "start_time": "2025-01-06T07:31:22.276928Z"
+     "end_time": "2025-01-06T12:12:23.384254Z",
+     "start_time": "2025-01-06T12:12:23.379562Z"
     }
    },
    "source": [
@@ -1673,7 +1673,7 @@
      ]
     }
    ],
-   "execution_count": 76
+   "execution_count": 119
   },
   {
    "metadata": {
@@ -1717,8 +1717,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-06T07:32:42.146703Z",
-     "start_time": "2025-01-06T07:32:42.143772Z"
+     "end_time": "2025-01-06T12:12:34.775132Z",
+     "start_time": "2025-01-06T12:12:34.772044Z"
     }
    },
    "outputs": [
@@ -1743,7 +1743,7 @@
      ]
     }
    ],
-   "execution_count": 78
+   "execution_count": 121
   },
   {
    "cell_type": "code",
@@ -2828,8 +2828,37 @@
    "execution_count": 117
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T01:41:19.869569Z",
+     "start_time": "2025-01-07T01:41:19.426796Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": 19,
+   "source": "import numpy as np",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# ----------练习： 处理数组中nan\n",
+    "t = np.arange(24).reshape(4, 6).astype('float')\n",
+    "#\n",
+    "# 将数组中的一部分替换nan\n",
+    "t[1, 3:] = np.nan\n",
+    "print(t)\n",
+    "print('-------------------')\n",
+    "print(t.shape)\n",
+    "print(id(t))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T01:49:44.132590Z",
+     "start_time": "2025-01-07T01:49:44.129833Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2841,28 +2870,44 @@
       " [18. 19. 20. 21. 22. 23.]]\n",
       "-------------------\n",
       "(4, 6)\n",
-      "2272565048016\n",
-      "[ 3. 15. 21.]\n",
-      "[ 4. 16. 22.]\n",
-      "[ 5. 17. 23.]\n",
-      "[[ 0.  1.  2.  3.  4.  5.]\n",
-      " [ 6.  7.  8. 13. 14. 15.]\n",
-      " [12. 13. 14. 15. 16. 17.]\n",
-      " [18. 19. 20. 21. 22. 23.]]\n",
-      "2272565048016\n"
+      "2218346550384\n"
      ]
     }
    ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T01:43:55.650661Z",
+     "start_time": "2025-01-07T01:43:55.647668Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "t.shape[1]  #很长的一句代码，不理解，拆出来一部分来理解",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T01:51:22.283630Z",
+     "start_time": "2025-01-07T01:49:53.443850Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "# ----------练习： 处理数组中nan\n",
-    "t = np.arange(24).reshape(4, 6).astype('float')\n",
-    "#\n",
-    "# 将数组中的一部分替换nan\n",
-    "t[1, 3:] = np.nan\n",
-    "print(t)\n",
-    "print('-------------------')\n",
-    "print(t.shape)\n",
-    "print(id(t))\n",
     "# 遍历每一列，然后判断每一列是否有nan\n",
     "for i in range(t.shape[1]):\n",
     "    #获取当前列数据\n",
@@ -2877,27 +2922,41 @@
     "        print(temp_col_not_nan)\n",
     "        # 将nan替换成这一列的平均值\n",
     "        temp_col[np.isnan(temp_col)] = np.mean(temp_col_not_nan)\n",
-    "\n",
+    "print('-'*50)\n",
     "print(t)\n",
     "print(id(t))"
    ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-10T02:54:19.051084900Z",
-     "start_time": "2024-04-10T02:54:19.035077600Z"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3. 15. 21.]\n",
+      "[ 4. 16. 22.]\n",
+      "[ 5. 17. 23.]\n",
+      "--------------------------------------------------\n",
+      "[[ 0.  1.  2.  3.  4.  5.]\n",
+      " [ 6.  7.  8. 13. 14. 15.]\n",
+      " [12. 13. 14. 15. 16. 17.]\n",
+      " [18. 19. 20. 21. 22. 23.]]\n",
+      "2218346550384\n"
+     ]
     }
-   }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-05T06:46:17.005377900Z",
-     "start_time": "2024-07-05T06:46:16.977107700Z"
+     "end_time": "2025-01-07T01:51:38.623976Z",
+     "start_time": "2025-01-07T01:51:38.620915Z"
     }
    },
+   "source": [
+    "print(np.inf == np.inf)\n",
+    "np.inf"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -2908,22 +2967,58 @@
     },
     {
      "data": {
-      "text/plain": "True"
+      "text/plain": [
+       "inf"
+      ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "print(np.inf == np.inf)\n",
-    "np.inf"
-   ]
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T01:52:03.062684Z",
+     "start_time": "2025-01-07T01:52:03.059784Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.inf >-np.inf",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T01:52:49.926491Z",
+     "start_time": "2025-01-07T01:52:49.922898Z"
+    }
+   },
+   "source": [
+    "# np.nan和任何数据运算的结果都是nan\n",
+    "t = np.arange(24).reshape(4, 6).astype('float')\n",
+    "#\n",
+    "# 将数组中的一部分替换nan\n",
+    "t[1, 3:] = np.nan\n",
+    "\n",
+    "t1 = np.arange(24).reshape(4, 6).astype('float')\n",
+    "t + t1"
+   ],
    "outputs": [
     {
      "data": {
@@ -2934,31 +3029,26 @@
        "       [36., 38., 40., 42., 44., 46.]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# np.nan和任何数据运算的结果都是nan\n",
-    "t = np.arange(24).reshape(4, 6).astype('float')\n",
-    "#\n",
-    "# 将数组中的一部分替换nan\n",
-    "t[1, 3:] = np.nan\n",
-    "\n",
-    "t1 = np.arange(24).reshape(4, 6).astype('float')\n",
-    "t + t1"
-   ]
+   "execution_count": 13
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-05T06:47:27.486868700Z",
-     "start_time": "2024-07-05T06:47:27.474758200Z"
+     "end_time": "2025-01-07T01:53:32.318397Z",
+     "start_time": "2025-01-07T01:53:32.315523Z"
     }
    },
+   "source": [
+    "arr = np.array([-1, 0])\n",
+    "print(arr)\n",
+    "print(arr[0] / arr[1])  #1除0就会得到inf"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -2972,38 +3062,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_10692\\576235320.py:3: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  print(arr[0]/arr[1])  #1除0就会得到inf\n"
+      "C:\\Users\\41507\\AppData\\Local\\Temp\\ipykernel_14024\\773640058.py:3: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  print(arr[0] / arr[1])  #1除0就会得到inf\n"
      ]
     }
    ],
-   "source": [
-    "arr = np.array([-1, 0])\n",
-    "print(arr)\n",
-    "print(arr[0] / arr[1])  #1除0就会得到inf"
-   ]
+   "execution_count": 15
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "nan"
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": "np.nan + np.inf",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-05T06:48:03.998164500Z",
-     "start_time": "2024-07-05T06:48:03.988564300Z"
+     "end_time": "2025-01-07T01:53:55.793685Z",
+     "start_time": "2025-01-07T01:53:55.790647Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -3014,13 +3102,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-05T06:48:51.981045200Z",
-     "start_time": "2024-07-05T06:48:51.973531500Z"
+     "end_time": "2025-01-07T01:55:07.336582Z",
+     "start_time": "2025-01-07T01:55:07.333292Z"
     }
    },
+   "source": [
+    "#对换数组的维度\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(12).reshape(3, 4)\n",
+    "print('原数组：')\n",
+    "print(a)\n",
+    "print('\\n')\n",
+    "\n",
+    "print('对换数组：')\n",
+    "print(np.transpose(a))\n",
+    "print(a)\n",
+    "\n",
+    "# 与transpose一致\n",
+    "a = np.arange(12).reshape(3, 4)\n",
+    "\n",
+    "print('原数组：')\n",
+    "print(a)\n",
+    "print('\\n')\n",
+    "\n",
+    "print('转置数组：')\n",
+    "print(a.T)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -3054,33 +3164,29 @@
      ]
     }
    ],
-   "source": [
-    "#对换数组的维度\n",
-    "import numpy as np\n",
-    "\n",
-    "a = np.arange(12).reshape(3, 4)\n",
-    "print('原数组：')\n",
-    "print(a)\n",
-    "print('\\n')\n",
-    "\n",
-    "print('对换数组：')\n",
-    "print(np.transpose(a))\n",
-    "print(a)\n",
-    "\n",
-    "# 与transpose一致\n",
-    "a = np.arange(12).reshape(3, 4)\n",
-    "\n",
-    "print('原数组：')\n",
-    "print(a)\n",
-    "print('\\n')\n",
-    "\n",
-    "print('转置数组：')\n",
-    "print(a.T)"
-   ]
+   "execution_count": 17
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "source": [
+    "# 函数用于交换数组的两个轴\n",
+    "t1 = np.arange(24).reshape(4, 6)\n",
+    "re1 = t1.swapaxes(1, 0)\n",
+    "\n",
+    "print(' 原 数 组 ：')\n",
+    "print(t1)\n",
+    "print('\\n')\n",
+    "print(re1.shape)\n",
+    "print('调用 swapaxes 函数后的数组：')\n",
+    "print(re1)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T01:57:05.611979Z",
+     "start_time": "2025-01-07T01:57:05.608175Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3104,29 +3210,26 @@
      ]
     }
    ],
+   "execution_count": 18
+  },
+  {
+   "cell_type": "code",
    "source": [
-    "# 函数用于交换数组的两个轴\n",
-    "t1 = np.arange(24).reshape(4, 6)\n",
-    "re1 = t1.swapaxes(1, 0)\n",
-    "\n",
-    "print(' 原 数 组 ：')\n",
-    "print(t1)\n",
-    "print('\\n')\n",
-    "print(re1.shape)\n",
-    "print('调用 swapaxes 函数后的数组：')\n",
-    "print(re1)\n"
+    "#如果是3维及以上，称为轴交换\n",
+    "t3 = np.arange(60).reshape(3, 4, 5)\n",
+    "print(t3.shape)\n",
+    "print('-' * 50)\n",
+    "t3 = np.swapaxes(t3, 1, 2)\n",
+    "print(t3.shape)\n",
+    "# print(t3) 数据不用记住，不用观察"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-05T06:49:21.033233700Z",
-     "start_time": "2024-07-05T06:49:21.021879600Z"
+     "end_time": "2025-01-07T02:01:08.005024Z",
+     "start_time": "2025-01-07T02:01:08.001668Z"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3138,83 +3241,101 @@
      ]
     }
    ],
-   "source": [
-    "t3 = np.arange(60).reshape(3, 4, 5)\n",
-    "print(t3.shape)\n",
-    "print('-' * 50)\n",
-    "t3 = np.swapaxes(t3, 1, 2)\n",
-    "print(t3.shape)\n",
-    "# print(t3) 数据不用记住，不用观察"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-10T03:01:35.658343900Z",
-     "start_time": "2024-04-10T03:01:35.627354600Z"
-    }
-   }
+   "execution_count": 22
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-05T06:56:04.813442600Z",
-     "start_time": "2024-07-05T06:56:04.800462200Z"
+     "end_time": "2025-01-07T02:31:05.337801Z",
+     "start_time": "2025-01-07T02:31:05.335611Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(3, 6, 4, 5)"
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 数组的轴滚动,swapaxes每次只能交换两个轴，没有rollaxis方便，默认情况下轴滚动最前面\n",
     "a = np.ones((3, 4, 5, 6))\n",
     "# np.rollaxis(a, 2).shape\n",
-    "np.rollaxis(a, 3, 1).shape"
-   ]
+    "b = np.rollaxis(a, 3, 1)\n",
+    "print(b.shape)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 6, 4, 5)\n"
+     ]
+    }
+   ],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T02:31:14.793446Z",
+     "start_time": "2025-01-07T02:31:14.789880Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(b.shape)\n",
+    "c=np.rollaxis(b, 1,4)  #轴会滚动，直到它位于此位置之前\n",
+    "print(c.shape)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 6, 4, 5)\n",
+      "(3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "execution_count": 34
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-05T06:56:53.925773100Z",
-     "start_time": "2024-07-05T06:56:53.909499600Z"
+     "end_time": "2025-01-07T02:34:08.963946Z",
+     "start_time": "2025-01-07T02:34:08.961309Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[1, 2, 3],\n       [1, 2, 3]])"
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "#数据拷贝，copy()和赋值的区别\n",
     "b = np.array([[1, 2, 3], [1, 2, 3]])\n",
     "a = b.copy()\n",
     "a"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 35
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-05T06:56:57.033771400Z",
-     "start_time": "2024-07-05T06:56:57.021594100Z"
+     "end_time": "2025-01-07T02:34:18.329709Z",
+     "start_time": "2025-01-07T02:34:18.326657Z"
     }
    },
+   "source": [
+    "b[0, 0] = 3\n",
+    "print(b)\n",
+    "a"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -3226,37 +3347,20 @@
     },
     {
      "data": {
-      "text/plain": "array([[1, 2, 3],\n       [1, 2, 3]])"
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [1, 2, 3]])"
+      ]
      },
-     "execution_count": 95,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "b[0, 0] = 3\n",
-    "print(b)\n",
-    "a"
-   ]
+   "execution_count": 36
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[0.23367611 0.6272264  0.78609353 0.28895611]\n",
-      "  [0.37526288 0.76966567 0.09129868 0.90675475]\n",
-      "  [0.43071865 0.62906737 0.02699415 0.69186994]]\n",
-      "\n",
-      " [[0.4031692  0.03327238 0.5645777  0.58180914]\n",
-      "  [0.5438122  0.45401529 0.93533821 0.8071288 ]\n",
-      "  [0.03298609 0.07092619 0.28058237 0.72889889]]]\n"
-     ]
-    }
-   ],
    "source": [
     "#随机数生成\n",
     "arr = np.random.rand(2, 3, 4)\n",
@@ -3265,10 +3369,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-11T01:52:37.469188900Z",
-     "start_time": "2024-04-11T01:52:37.406224800Z"
+     "end_time": "2025-01-07T02:34:42.900327Z",
+     "start_time": "2025-01-07T02:34:42.895808Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.82094565 0.04892934 0.51916932 0.4800426 ]\n",
+      "  [0.28383954 0.58814351 0.5149937  0.46266364]\n",
+      "  [0.95783494 0.78241918 0.67274794 0.82360308]]\n",
+      "\n",
+      " [[0.9878567  0.19516939 0.19516496 0.4997569 ]\n",
+      "  [0.23478644 0.14052538 0.81457725 0.08001609]\n",
+      "  [0.66244883 0.14801718 0.2726453  0.10131378]]]\n"
+     ]
+    }
+   ],
+   "execution_count": 37
   },
   {
    "cell_type": "code",
@@ -3280,6 +3400,26 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T02:40:52.674787Z",
+     "start_time": "2025-01-07T02:40:52.671601Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "names = 'zhangsan,lisi,wangwu,zhaoliu,sunqi'\n",
+    "#写入文件\n",
+    "with open('names.csv', 'w') as f:\n",
+    "    f.write(names)\n",
+    "    f.write('\\n')\n",
+    "    f.write('12,23,34,45,56')\n",
+    "\n"
+   ],
+   "outputs": [],
+   "execution_count": 38
   }
  ],
  "metadata": {
